<resources>
    <string name="app_name">AppRegistro</string>
    <string name="registro_de_personas">REGISTRO DE PERSONAS</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="segundo_nombre">Segundo Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="mostrar">Mostrar</string>
    <string name="borrar">Borrar</string>
    <string name="error_1">Por favor digite bien su primer nombre</string>
    <string name="error_2">Por favor digite bien su segundo nombre</string>
    <string name="error_3">Por favor digite bien su primer apellido</string>
    <string name="error_4">Por favor digite bien su segundo apellido</string>
    <string name="error_5">Por favor digite bien su edad</string>
    <string name="error_6">Por favor digite bien su sexo</string>
    <string name="mensaje_1">Hola</string>
    <string name="mensaje_2">tu edad es</string>
    <string name="mensaje_3">y tu sexo es</string>
</resources>
