<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.david.appregistro.PrincipalActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="0.02"
            android:text="@string/registro_de_personas"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtPrimerNombre"
            android:hint="@string/primer_nombre" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtSegundoNombre"
            android:hint="@string/segundo_nombre" />

        <EditText
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtPrimerApellido"
            android:hint="@string/primer_apellido" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtSegundoApellido"
            android:hint="@string/segundo_apellido" />

        <EditText
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtEdad"
            android:hint="@string/edad" />

        <EditText
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtSexo"
            android:hint="@string/sexo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_weight="0.28">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdMostrar"
                android:text="@string/mostrar"
                android:textAllCaps="false"
                android:textStyle="normal|italic"
                android:fontFamily="serif" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdBorrar"
                android:text="@string/borrar"
                android:fontFamily="serif"
                android:textStyle="normal|italic"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
